# HonestMix

./: .gitignore  CMakeLists.txt  HonestMix_源码全集.md  HonestMix_源码全集.txt  README.md  TRADEMARK.md  design-tokens.md  index.html  supabase_schema.sql  剩余任务清单.md  拼接报告_BETA2.md  纯净引擎_接口文档.md  组装说明书.md  美工拆解工作单.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Core/: AppState.cpp  AppState.h  BPMData.cpp  BPMData.h  Design.h  HeadphoneDatabase.cpp  HeadphoneDatabase.h
Source/Net/: FeedbackClient.cpp  FeedbackClient.h
Source/UI/: BpmPanel.cpp  BpmPanel.h  CheckCard.cpp  CheckCard.h  Components.cpp  Components.h  FeedbackCard.cpp  FeedbackCard.h  SealComponent.cpp  SealComponent.h  SetupCard.cpp  SetupCard.h  ShareCard.cpp  ShareCard.h  SnakeKnob.cpp  SnakeKnob.h  TransitionCard.cpp  TransitionCard.h
Source/dsp/: CorrectionEngine.cpp  CorrectionEngine.h  FeedbackClient.cpp  FeedbackClient.h  WetDryMixer.cpp  WetDryMixer.h  fir_data.h  fir_data_clean.h
_skeleton_v1/: CMakeLists.txt.skeleton
_skeleton_v1/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
_skeleton_v1/Source/Core/: AppState.cpp  AppState.h  HeadphoneDatabase.cpp  HeadphoneDatabase.h  Settings.cpp  Settings.h
_skeleton_v1/Source/DSP/: CorrectionProcessor.cpp  CorrectionProcessor.h  WetDryMixer.cpp  WetDryMixer.h
_skeleton_v1/Source/UI/: FeedbackDialog.cpp  FeedbackDialog.h  Knob.cpp  Knob.h  LookAndFeel.cpp  LookAndFeel.h  MainComponent.cpp  MainComponent.h  MainUI.cpp  MainUI.h  MonitorCheck.cpp  MonitorCheck.h  ShareCard.cpp  ShareCard.h  ToggleSwitch.cpp  ToggleSwitch.h  TransitionCard.cpp  TransitionCard.h
_skeleton_v1/Source/UI/BPMAssistant/: BPMAssistant.cpp  BPMAssistant.h  TapTempo.cpp  TapTempo.h  TimeReferenceTable.cpp  TimeReferenceTable.h
_skeleton_v1/Source/UI/SetupWizard/: AudioInterfaceBrowser.cpp  AudioInterfaceBrowser.h  SetupStep.cpp  SetupStep.h  SetupWizard.cpp  SetupWizard.h  StepHabits.cpp  StepHabits.h  StepHeadphone.cpp  StepHeadphone.h  StepIndicator.cpp  StepIndicator.h  StepInterface.cpp  StepInterface.h
_skeleton_v1/Source/Utils/: BPMCalculator.cpp  BPMCalculator.h  ValueTreeHelpers.cpp  ValueTreeHelpers.h
docs/: HonestMix_UI终稿.md  HonestMix_交接.md  HonestMix_终版.html
tests/: Main.cpp  TestCorrectionEngine.cpp  TestFeedbackClient.cpp
tools/: build_fir.bat  export_fir.cpp
